Add Random operation + GUI for arithmetic operation + test